<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible">



        <ListView
            android:id="@+id/lview"

            android:layout_width="match_parent"
            android:layout_height="match_parent"></ListView>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/InnerRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/greeting1"


            android:textSize="20sp"

            />
        <TextView
            android:id="@+id/list_city_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string-array/city_list"
            android:layout_marginStart="10dp"
            android:textSize="15sp">

        </TextView>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/weather_attr4"

            />

        <LinearLayout
            android:id="@+id/InnerRelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBoxBold1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="left"
                android:text="@string/weather_attr2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/InnerRelativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBoxBold2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="left"
                android:text="@string/weather_attr3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/InnerRelativeLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBoxBold3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="left"
                android:text="@string/weather_attr1" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/InnerRelativeLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/okBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Ok" />

            <Button
                android:id="@+id/stornoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="CANCEL" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/InnerRelativeLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">


    </LinearLayout>

</android.support.constraint.ConstraintLayout>